@@ -11,6 +11,7 @@ A3\t[:function, :ROW, [:cell, :"$A$5"]]
 A4\t[:function, :ROW, [:sheet_reference, "Sheet1", [:cell, :G70]]]
 A5\t[:function, :ROW]
 A6\t[:function, :COLUMN]
+A7\t[:arithmetic, [:function, :INDEX, [:area, "$F$222", "$O$230"], [:function, "MATCH", [:cell, "$D498"], [:area, "$E$222", "$E$230"], [:number, "0"]], [:arithmetic, [:function, :COLUMN], [:operator, "-"], [:function, :COLUMN, [:cell, "$F$403"]], [:operator, "+"], [:number, "1"]]], [:operator, "*"], [:cell, "L340"]]
 END
 
 expected_output = <<END
@@ -20,6 +21,7 @@ A3\t[:number, 5.0]
 A4\t[:number, 70.0]
 A5\t[:number, 5.0]
 A6\t[:number, 1.0]
+A7\t[:arithmetic, [:function, :INDEX, [:area, "$F$222", "$O$230"], [:function, "MATCH", [:cell, "$D498"], [:area, "$E$222", "$E$230"], [:number, "0"]], [:arithmetic, [:number, 1.0], [:operator, "-"], [:number, 6.0], [:operator, "+"], [:number, "1"]]], [:operator, "*"], [:cell, "L340"]]
 END
     
 input = StringIO.new(input)
