@@ -1,6 +1,7 @@
 # Head
 
 - Optimised the array formula expansion a tiny bit
+- Aborts earlier if unable to replace a ROW or COLUMN function
 
 # 0.2.13 - 2013 February 3rd
 
